# maching-engine

./: .gitignore  Cargo.toml  build.rs  count
examples/: Cargo.toml  bench.rs
examples/bench-rocksdb/: Cargo.toml
examples/bench-rocksdb/src/: main.rs
openmatching/: Cargo.toml
openmatching-account/: Cargo.toml
openmatching-account/.sqlx/: query-1718508efaf38c8d16dc21314c45ef9965bc1e181fa549d22fffc5d17cfca707.json  query-174b6c119b88ba99778ad63386200ab0b19679d17077905aeb2fe645f108830f.json  query-1bf19286f78fd2d65a41bd49da0c0ebd232505477f0ebd43c78c59d5539d1693.json  query-1e9d805934dc70a9b6601922bbf03d887dbe8428ce78b1c85d7536c512246a5e.json  query-230e4629001417a3565d0632c3107cafb2a39a028d8b7aed79b8bf8dcffb8b90.json  query-2fbb09bcc5c8994c840aab962ffe5c9b257fa69cbd0ac82cc60d942d4d153e5b.json  query-37396789ae99d1dd5b61cb021c8934b4371e7addbd36c70eda3be126e48a0dd7.json  query-3ec510908ce3fa0b36c9b80006a760f4b9be1977ab66cd4adf0bc1a8c8659ea0.json  query-430f4da7f9b5321f7c9c30404fc8fc29a8c51e44845bd941a944b383509bea95.json  query-4e63abf02a89b39232579ec7897456e1d50bb0553d705ad937ceec4f577da60b.json  query-4f09ae00392bf158bd30fd092a981c15b9804b6f2614d5a4af84a86abeb0fae7.json  query-4fb5d956e01fd3038d4788124cb629bdc17c9a6cf93dbfc78514147625c9b2e7.json  query-570999d00fda1ac3c03daab61ddaa80aa64fa659622b058471e21d633b46d8ae.json  query-5d0df01a1b4ca2f638b0e0ecf94fdf6f56478424082505cac323b6efa09d8578.json  query-68e5228b4460ea4e731ffd330c23c56519b403dc099ca519a17b0c194ed2704d.json  query-6eea622732494cbc1c4742dec972a954fbe44733acd208c9209b4da90c950bd9.json  query-76f58dd1327583e4549bacf9b00545a2ba044f0981e7f18cc8aec96a44e3f259.json  query-7828c009d321e7494d240e578cfc806d3c981d1375f24e2adf30d5e1017f03f3.json  query-882192972478cae657a49d3dd15da3424866f829b123ea36378545e3258266c3.json  query-8bbe7a6b67fe7e4cff943360cc09629043697ae8c47127445614bcf5077b311d.json  query-8d729ed391d2ebe81b2717eb09116bf029e0d2b81ce55cb24ec61eb0c6914c68.json  query-a404748bbec0482f83dbc14c107c517b36f65f49c1d70b721e60d7f9f55d43e8.json  query-a64c211bf98e6532a85e862f5f52c1ee2d3ed0472f12390a62456418489fe96b.json  query-a8f75ffb7582c3eefeded3787843f93b5a4a797c48bdd238360b537ad080aa0d.json  query-a93b53f29adf2a9022a8227a3d05edf2ba486f27afa19dd70d0f160e3601e968.json  query-af61675de6333c292611849c56e9833d1a9506c330de80e7ecaf4bc66e0b0653.json  query-bb5c0aa86a733eadd8158b02270e7f22e5a6e25122583acea199ac404a658abe.json  query-d45829fc1a237726bf9986be274bb6559971de8bf54492b13062bc70fa763f6e.json  query-fcb6d1afb24f213a31598aedb242d8e0c34d9e3ea639367572602a221eb092d6.json  query-fd781c95fe991ad02159ce42c5474613bae17c1d140c085802ace9ae90d755c5.json
openmatching-account/migrations/: 20250918125000_init.down.sql  20250918125000_init.up.sql  20250919133241_check_account_integrity.down.sql  20250919133241_check_account_integrity.up.sql
openmatching-account/src/: lib.rs
openmatching-persister-pg/: Cargo.toml
openmatching-persister-pg/.sqlx/: query-10a94f962af3cc1bea58f28e5777068bf152035222d74ad9e27f6cda6ce380e6.json  query-20e9dddfadaa8467d3d4148d71e004ff37c17a718e62137d517d7df5edc78ad0.json  query-4587cf1536808b8cb02cb31752dd35723cf49c5677e9df084f7794747668891e.json  query-595ffc10e42d2d559c8239ab89c63a45756cabb65fba676fd2e8bf817a1e05a2.json  query-5e3d9b574c1eb5c363c3aae55e90e3664110a4f5ecfc4798c85742a2018361ec.json  query-71123f12a9503baa9467dfe0e0fbc87c2403a29a744a83b879f34d5784a48abf.json  query-82f544c07a6e2fde6791fb43a52e8483fa887f698bb008fa0c1d404e09cdcba6.json  query-8765f939515a1cc11d05f7a6ff43cd974eb626c23da6c4874cfc79c12059430c.json  query-b401855ab19fcabba33d9af8d1b607690ba548fd6130403bce32dff058c5c810.json  query-ca32b3173b8bc9a37db68ea21a908237115d92093ddf335824e752514469d340.json  query-d8d310053cab2c5c3de851bcff21ccc8a447c3cc53d1112621296f034e3732ac.json  query-f25fa1eb10da1c943e648f251d25288eebd4476cf0480dd6b886364332c12272.json  query-fd028b359cc2372cc76f3687d6bed7335a48cf354d1ab1c09e80ceb1330190f4.json
openmatching-persister-pg/migrations/: 20250916124006_init.sql
openmatching-persister-pg/src/: lib.rs
openmatching-persister-rocksdb/: Cargo.toml
openmatching-persister-rocksdb/src/: lib.rs  new_persister.rs
openmatching/src/: borrow.rs  lib.rs  main.rs  new_persister.rs  persister.rs
openmatching/src/order_book/: mod.rs  transaction.rs
openmatching/src/protos/: command.proto  key.proto  key.rs  mod.rs  order.proto
src/: all_orders.rs  lib.rs  logs.rs  main.rs  order_book.rs  order_book_persister.rs  (+1 more)
(+9 files in other folders)
