[package]
name = "matching-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
prost = "0.14.1"
prost-types = "0.14.1"
rocksdb = { version = "0.24.0", features = ["multi-threaded-cf"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"


[build-dependencies]
prost-build = "0.14.1"
