[package]
name = "matching-engine"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "matching-engine"
path = "src/main.rs"

[dependencies]
hex = "0.4.3"
prost = "0.14.1"
prost-types = "0.14.1"
rocksdb = { version = "0.24.0", features = ["multi-threaded-cf"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["v6", "std", "rng"] }
quickcheck = "1.0.3"
tracing-subscriber = "0.3.20"

[dev-dependencies]
quickcheck_macros = "1.1.0"


[build-dependencies]
prost-build = "0.14.1"
