[workspace]
resolver = "2"
members = [
    "openmatching",
    "openmatching-persister-pg",
    "openmatching-persister-rocksdb",
]

[workspace.package]
authors = ["mingyang91 <my@famer.me>"]
edition = "2024"
license = "MIT"
rust-version = "1.80"

[workspace.dependencies]
openmatching = { path = "openmatching", version = "0.1.0" }
openmatching-persister-pg = { path = "openmatching-persister-pg", version = "0.1.0" }
openmatching-persister-rocksdb = { path = "openmatching-persister-rocksdb", version = "0.1.0" }
