[package]
name = "openmatching-persister-pg"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "postgres",
    "uuid",
    "chrono",
] }
openmatching = { path = "../openmatching", version = "0.1.0" }
thiserror = "2"
uuid = "1"
tracing = "0.1"
