[package]
name = "openmatching-persister-rocksdb"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"


[dependencies]
hex = "0.4"
prost = "0.14"
prost-types = "0.14"
rocksdb = { version = "0.24", features = ["multi-threaded-cf"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.18", features = ["v6", "std", "rng"] }
quickcheck = "1"
tracing-subscriber = "0.3"
openmatching = { path = "../openmatching", version = "0.1.0" }

[dev-dependencies]
quickcheck_macros = "1"


[build-dependencies]
prost-build = "0.14"
