[package]
name = "bench-rocksdb"
version = "0.1.0"
edition = "2024"

[dependencies]
openmatching = { path = "../../openmatching", version = "0.1.0" }
openmatching-persister-rocksdb = { path = "../../openmatching-persister-rocksdb", version = "0.1.0" }
tokio = { version = "1", features = ["full"] }
quickcheck = "1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
quickcheck_macros = "1"
